[ci skip]: how to info

--- a/CNAME.sample
+++ b/CNAME.sample
@@ -1,1 +1,2 @@
-dyndna.github.io/lanyon-plus
+example.com
+# Replace example.com with your domain name and remove this comment line; rename CNAME.sample to CNAME
