Update to Jekyll 3.2.1 and github-pages v93

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,10 @@
 #permalink:           pretty
 permalink: /blog/:year/:month/:day/:title/
 relative_permalinks: false
+encoding: utf-8
 
 # Setup
-title:               foo
+title:               My Website
 #tagline:             'foo's website
 description:         Foo's blog...
 url: https://dyndna.github.io/lanyon-plus
@@ -17,10 +18,15 @@ paginate: 5
 paginate_path: "/blog/page:num"
 excerpt_separator: <!--more-->
 default_bg: sitebg.jpg
-default_logo: sitelogo.png 
+default_logo: sitelogo.png
 safe: false
 #timezone:    America/Chicago
 future:      true
+
+
+## code highlight options
+syntax_highlighter: rouge
+input: GFM
 
 gems:
   - jekyll-paginate
@@ -28,6 +34,10 @@ gems:
   - font-awesome-sass
   - kramdown
   - rouge
+  - jekyll-mentions
+
+jekyll-mentions:
+  base_url: https://twitter.com
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "rakefile", "README.md", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "LICENSE", "vendor", "assets", "_plugins", "public/dormant"]
@@ -99,5 +109,5 @@ disqus_shortname: foo
 
 #### For dummy website only - remove if you wish ####
 github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.0
+version: 1.1.1
 ## END ##
