--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title:               My Website
 #tagline:             'foo's website
 description:         Foo's blog...
 url: https://lanyon-plus.sbamin.com
-baseurl:
+baseurl: ""
 urlimg: https://lanyon-plus.sbamin.com/images/
-## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name.
+## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
 #url: https://dyndna.github.io/lanyon-plus
 #baseurl: "/lanyon-plus"
 #urlimg: https://dyndna.github.io/lanyon-plus/images/
