--- a/_devconfig.yml
+++ b/_devconfig.yml
@@ -14,6 +14,9 @@ url:                 http://localhost:4000
 baseurl:  ""
 urlimg: http://localhost:4000/images/
 markdown: kramdown
+kramdown:
+  math_engine: mathjax
+
 paginate: 5
 paginate_path: "/blog/page:num"
 excerpt_separator: <!--more-->
@@ -29,11 +32,9 @@ syntax_highlighter: rouge
 input: GFM
 
 gems:
-  - jekyll-paginate
-  - jemoji
+  - github-pages
   - font-awesome-sass
-  - kramdown
-  - rouge
+  - jekyll-redirect-from
   - jekyll-mentions
 
 jekyll-mentions:
