--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ encoding: utf-8
 # Setup
 title:               My Website
 #tagline:             'foo's website
-description:         Foo's blog...
-url: https://lanyon-plus.sbamin.com
-baseurl: ""
-urlimg: https://lanyon-plus.sbamin.com/images/
+#description:         Foo's blog...
+#url: https://lanyon-plus.sbamin.com
+#baseurl: ""
+#urlimg: https://lanyon-plus.sbamin.com/images/
 ## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
 #url: https://dyndna.github.io/lanyon-plus
 #baseurl: "/lanyon-plus"
@@ -49,31 +49,31 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 
 # About/contact
 author:
-  name:              Foo Boo
-  url:               https://twitter.com/abcd
-  avatar:         foo.png
-  #email:           
+  name: Yeonkang Kim
+  #url:               https://twitter.com/abcd
+  #avatar:         foo.png
+  email: rladusrkd7@gmail.com           
 
 # Owner/author information
 owner:
-  name:           Foo Boo
-  avatar:         foo.png
-  #email:          
+  name:           Yeonkang Kim
+  #avatar:         foo.png
+  email: rladusrkd7@gmail.com          
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        abcd
-  facebook:       
-  github:         xyz123abc
-  stackexchange:  
-  linkedin:       https://www.linkedin.com/in/foo
-  instagram:      
-  flickr:
-  tumblr:  
-  google_plus:    https://plus.google.com/+foo
+  #twitter:        abcd
+  #facebook:       
+  github:         ykkim123
+  #stackexchange:  
+  #linkedin:       https://www.linkedin.com/in/foo
+  #instagram:      
+  #flickr:
+  #tumblr:  
+  #google_plus:    https://plus.google.com/+foo
   # orcid and google scholar IDs are different than standard username.
-  orcid: xyz123abc
-  gscholar: xyz123abc
+  #orcid: xyz123abc
+  #gscholar: xyz123abc
 
 ## sidebar links:
 # For external links add external: true
@@ -82,37 +82,37 @@ links:
     url: /
   - title: <i class="iconside iconm-user"></i> About
     url: /about/
-  - title: <i class="iconside iconm-quill"></i> Blog
+  - title: <i class="iconside iconm-quill"></i> Posts
     url: /blog/
   - title: <i class="fa fa-tags"></i> Tags
     url: /tags/
-  - title: <i class="fa fa-archive"></i> Archive
-    url: /archive/
-  - title: <i class="iconside iconm-wordpress"></i> Old Blog
-    url: https://foo.wordpress.com
-    external: true
-  - title: <i class="iconside iconm-envelop"></i> Contact
-    url: /contact/
-  - title: <i class="iconside iconm-twitter"></i> Twitter
-    url: https://twitter.com/abcd
-    external: true
-  - title: <i class="iconside iconm-feed2"></i> Feed
-    url: /feed.xml
+  #- title: <i class="fa fa-archive"></i> Archive
+    #url: /archive/
+  #- title: <i class="iconside iconm-wordpress"></i> Old Blog
+    #url: https://foo.wordpress.com
+    #external: true
+  #- title: <i class="iconside iconm-envelop"></i> Contact
+    #url: /contact/
+  #- title: <i class="iconside iconm-twitter"></i> Twitter
+    #url: https://twitter.com/abcd
+    #external: true
+  #- title: <i class="iconside iconm-feed2"></i> Feed
+    #url: /feed.xml
 
 # Google Custom Search:
-#google_search: xyz123abc
+google_search: ykkim123
 
 # Twitter stream widget:
 # Replace xyz123abc with your twitter widget id from https://twitter.com/settings/widgets
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: foo
+#disqus_shortname: foo
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
 
 #### For dummy website only - remove if you wish ####
-github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.1
+#github_repo: https://github.com/dyndna/lanyon-plus
+#version: 1.1.1
 ## END ##
