--- a/_prose.yml
+++ b/_prose.yml
@@ -1,7 +1,7 @@
 prose:
   rooturl: ''
-  siteurl: 'http://example.com/'
-  relativeLinks: 'http://example.com/links.jsonp'
+  siteurl: 'http://ykkim123.github.io'
+  relativeLinks: 'http://ykkim123.github.io/links.jsonp'
   media: 'images/media'
   ignore:
     - /_data
