--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ relative_permalinks: false
 encoding: utf-8
 
 # Setup
-title:               My Website
+title:               Yeonkang's Data Science
 #tagline:             'foo's website
 #description:         Foo's blog...
 #url: https://lanyon-plus.sbamin.com
