--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -9,7 +9,7 @@
   #title: "Follow me +foo"
 
 - name: GitHub
-  url: https://github.com/ykkim`12
+  url: https://github.com/ykkim123
   class: fa fa-github-square
   title: Code repository
 
