--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -11,7 +11,7 @@
 - name: GitHub
   url: https://github.com/ykkim123
   class: fa fa-github-square
-  title: Code repository
+  title: "Code repository"
 
 - name: Contact
   url: "/contact/"
