--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ google_search: ykkim123
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-#disqus_shortname: foo
+disqus_shortname: ykkim123
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
