--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ gems:
   - github-pages
   - font-awesome-sass
   - jekyll-redirect-from
-  - jekyll-mentions
+  #- jekyll-mentions
 
-jekyll-mentions:
-  base_url: https://twitter.com
+#jekyll-mentions:
+  #base_url: https://twitter.com
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "rakefile", "README.md", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "LICENSE", "vendor", "assets", "_plugins", "public/dormant"]
