--- a/_config.yml
+++ b/_config.yml
@@ -82,17 +82,17 @@ links:
     url: /
   - title: <i class="iconside iconm-user"></i> About
     url: /about/
+  - title: <i class="fa fa-tags"></i> Table of Contents
+    url: /tags/
   - title: <i class="iconside iconm-quill"></i> Blog
     url: /blog/
-  - title: <i class="fa fa-tags"></i> Tags
-    url: /tags/
+  - title: <i class="iconside iconm-envelop"></i> Contact
+    url: /contact/
   #- title: <i class="fa fa-archive"></i> Archive
     #url: /archive/
   #- title: <i class="iconside iconm-wordpress"></i> Old Blog
     #url: https://foo.wordpress.com
     #external: true
-  - title: <i class="iconside iconm-envelop"></i> Contact
-    url: /contact/
   #- title: <i class="iconside iconm-twitter"></i> Twitter
     #url: https://twitter.com/abcd
     #external: true
