--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,10 @@ links:
     url: /
   - title: <i class="iconside iconm-user"></i> About
     url: /about/
-  - title: <i class="fa fa-tags"></i> Tags
-    url: /tags/
   - title: <i class="iconside iconm-quill"></i> Blog
     url: /blog/
+  - title: <i class="fa fa-tags"></i> Tags
+    url: /tags//
   - title: <i class="iconside iconm-envelop"></i> Contact
     url: /contact/
   #- title: <i class="fa fa-archive"></i> Archive
