--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ links:
   - title: <i class="iconside iconm-quill"></i> Blog
     url: /blog/
   - title: <i class="fa fa-tags"></i> Tags
-    url: /tags//
+    url: /tags/
   - title: <i class="iconside iconm-envelop"></i> Contact
     url: /contact/
   #- title: <i class="fa fa-archive"></i> Archive
