--- a/_devconfig.yml
+++ b/_devconfig.yml
@@ -103,7 +103,7 @@ links:
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: foo
+disqus_shortname: ykkim123
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
