--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ encoding: utf-8
 title:               Yeonkang's Data Science
 #tagline:             'foo's website
 #description:         Foo's blog...
-#url: https://lanyon-plus.sbamin.com
-#baseurl: ""
-#urlimg: https://lanyon-plus.sbamin.com/images/
+url: https://ykkim123.github.io
+baseurl: ""
+urlimg: https://ykkim123.github.io/images/
 ## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
 #url: https://dyndna.github.io/lanyon-plus
 #baseurl: "/lanyon-plus"
