--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ encoding: utf-8
 title:               Yeonkang's Data Science
 #tagline:             'foo's website
 #description:         Foo's blog...
-#url: https://ykkim123.github.io
-#baseurl: ""
-#urlimg: https://ykkim123.github.io/images/
-## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
 url: https://ykkim123.github.io
-baseurl: "/"
+baseurl: ""
 urlimg: https://ykkim123.github.io/images/
+## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
+#url: https://ykkim123.github.io
+#baseurl: "/"
+#urlimg: https://ykkim123.github.io/images/
 markdown: kramdown
 kramdown:
   math_engine: mathjax
