--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ url: https://ykkim123.github.io
 baseurl: ""
 urlimg: https://ykkim123.github.io/images/
 ## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
-#url: https://ykkim123.github.io
-#baseurl: "/"
-#urlimg: https://ykkim123.github.io/images/
+#url: https://dyndna.github.io/lanyon-plus
+#baseurl: "/lanyon-plus"
+#urlimg: https://dyndna.github.io/lanyon-plus/images/
 markdown: kramdown
 kramdown:
   math_engine: mathjax
