--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,5 +1,5 @@
 - name: GitHub
-  url: https://github.com/ykkim123
+  url: https://github.com/ykkim123/Data-Science
   class: fa fa-github-square
   title: "Code repository"
 
