--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -12,3 +12,13 @@
   url: "/feed.xml"
   class: fa fa-rss-square
   title: "Subscribe to RSS"
+  
+- name: Twitter
+  url: https://twitter.com/abcd
+  class: fa fa-twitter-square
+  title: "Follow me @foo"
+
+- name: Google Plus
+  url: https://plus.google.com/+foo
+  class: fa fa-google-plus-square
+  title: "Follow me +foo"
